--- a/.github/workflows/cmake_ci.yml
+++ b/.github/workflows/cmake_ci.yml
@@ -21,7 +21,7 @@ jobs:
                 compiler: latest
             - name: Generates the makefile
               run: |
-                cmake . --DCMAKE_BUILD=Debug -DENABLE_COVERAGE=OFF ;
+                cmake . -DCMAKE_BUILD_TYPE=Debug -DENABLE_COVERAGE=OFF ;
                 cmake --build .
             - name: Check for lint errors
               run: make lint
