[Fix]Library name

--- a/.github/workflows/cmake_ci.yml
+++ b/.github/workflows/cmake_ci.yml
@@ -42,4 +42,4 @@ jobs:
               with:
                 coverage-files: cov_result.info
                 minimum-coverage: 90
-                working-directory: src/lib
+                working-directory: src/libs
