--- a/.github/workflows/cmake_ci.yml
+++ b/.github/workflows/cmake_ci.yml
@@ -5,6 +5,7 @@ jobs:
     build-project:
         name: Continuous integration
         runs-on: ubuntu-24.04
+        timeout-minutes: 15
         steps:
             - name: Checkout Project
               uses: actions/checkout@v4.2.2
