[CMake|WIP]Arduino libraries inclusion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,8 +31,11 @@ option(ENABLE_COVERAGE "Enable coverage reporting with LCOV" OFF)
 
 # Folder for respectively source code (libs) and unit tests (tests)
 add_subdirectory(src/libs)
+add_subdirectory(src/sketches)
 add_subdirectory(src/tests)
 add_subdirectory(docs)
+
+# Debug messsage
 
 # Fetch content for libraries
 include(FetchContent)
