--- a/src/libs/CMakeLists.txt
+++ b/src/libs/CMakeLists.txt
@@ -1,5 +1,5 @@
-# Arduino IoTwin library name
-add_library(arduino_iotwin STATIC)
+# Simple IoTwin library name
+add_library(simple_iotwin STATIC)
 
 # Binary and library output folder
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out/bin)
@@ -10,12 +10,12 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out/lib)
 file(GLOB_RECURSE SOURCES
      "${CMAKE_CURRENT_SOURCE_DIR}/IoTwin/*.cpp"
      "${CMAKE_CURRENT_SOURCE_DIR}/IoTwin/*.h")
-target_sources(arduino_iotwin PRIVATE ${SOURCES})
+target_sources(simple_iotwin PRIVATE ${SOURCES})
 
 # Coverage option (if enabled)
 if(ENABLE_COVERAGE AND CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     message(TRACE "Code coverage enabled")
-    target_compile_options(arduino_iotwin PRIVATE --coverage -O0 -g -Wno-dev)
+    target_compile_options(simple_iotwin PRIVATE --coverage -O0 -g -Wno-dev)
 else()
     message(TRACE "Code coverage disabled")
 endif()
