--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,14 +28,13 @@ set(LIBRARY_ROOT_FOLDER ${CMAKE_BINARY_DIR}/libs/IoTwin)
 
 # Coverage option (for debugging and continuous integration)
 option(ENABLE_COVERAGE "Enable coverage reporting with LCOV" OFF)
+option(BOARD_FAMILY "Arduino family board (AVR | SAMD)" avr)
 
 # Folder for respectively source code (libs) and unit tests (tests)
 add_subdirectory(src/libs)
-#add_subdirectory(src/sketches)
+add_subdirectory(src/sketches)
 add_subdirectory(src/tests)
 add_subdirectory(docs)
-
-# Debug messsage
 
 # Fetch content for libraries
 include(FetchContent)
